# YibinU-mental

./: .env.example  .gitignore  README.md  advice.py  download_models.py  emotion.py  pyproject.toml  requirements.txt
src/front/: advice.html  config.js  index.html  scl90.html  script.js  style.css  uuid_manager.js
src/main/: APP.py  advice_generator.py  config.py  database.py  emotion_classifier.py  init_knowledge.py  migrate_db.py  model_loader.py  rag_service.py  scl90_logic.py  test_integration.py  test_knowledge_api.py  test_scl90_api.py  verify_scl90.py
src/main/routes/: analysis_routes.py  knowledge_routes.py  scl90_routes.py
src/main/services/: analysis_service.py  knowledge_service.py  scl90_service.py
src/main/utils/: logging_config.py  request_utils.py  validation.py
